--- a/src/sass/colors.scss
+++ b/src/sass/colors.scss
@@ -1,6 +1,6 @@
 $space-cadent: #2b2d42;
 $apple-red: #db162f;
-$eggshell: #f8f4e3;
+$cultured: #f5f5f5;
 $gray-web: #7c898b;
 $blue-crayola: #2081c3;
 //--------------------------------------------
