--- a/src/app/views/list/list.template.html
+++ b/src/app/views/list/list.template.html
@@ -1,1 +1,4 @@
-<p>list works!</p>
+<div *ngFor="let character of marvelCharacters">
+  <p>{{ character.id }} - {{ character.name }}</p>
+  <hr />
+</div>
