--- a/src/app/components/layouts/main/main.style.scss
+++ b/src/app/components/layouts/main/main.style.scss
@@ -2,5 +2,5 @@
 
 #main-wrapper {
   min-height: 100vh;
-  background: linear-gradient(0deg, $space-cadent 0%, $cultured 100%);
+  background-color: $cultured;
 }
