--- a/src/app/common/components/card/card.template.html
+++ b/src/app/common/components/card/card.template.html
@@ -1,4 +1,4 @@
 <div class="card-content">
-  <img [src]="characterData.thumbNail" alt="" />
-  <p>{{ characterData.name || undefinedCharacter.name}}</p>
+  <img [src]="characterData.thumbNail" [alt]="characterData.name" />
+  <p>{{ characterData.name }}</p>
 </div>
