--- a/src/app/views/list/list.template.html
+++ b/src/app/views/list/list.template.html
@@ -1,5 +1,10 @@
-<div id="chars-grid">
-  <div class="char-container" *ngFor="let char of marvelCharacters">
-    <component-card [characterData]="char" (click)="seeMore(char.id)"></component-card>
+<div *ngIf="marvelCharacters.length" class="character-wrapper">
+  <div id="chars-grid">
+    <div class="char-content" *ngFor="let char of marvelCharacters">
+      <component-card [characterData]="char" (click)="seeMore(char.id)"></component-card>
+    </div>
+  </div>
+  <div class="btn-row">
+    <button (click)="requestMarvelCharacters()">See More</button>
   </div>
 </div>
