using cache response

--- a/src/app/common/components/card/card.style.scss
+++ b/src/app/common/components/card/card.style.scss
@@ -4,6 +4,10 @@
   color: $cultured;
   background-color: $gray-web;
   border: 2px solid $space-cadent;
-
+  //------
   cursor: pointer;
+}
+.card-thumbnail {
+  width: 100%;
+  height: auto;
 }
