--- a/src/app/common/components/card/card.template.html
+++ b/src/app/common/components/card/card.template.html
@@ -1,4 +1,7 @@
 <div class="card-content">
   <img class="card-thumbnail" [src]="characterData.thumbNail" [alt]="characterData.name" />
-  <p>{{ characterData.name }}</p>
+  <div class="card-header">
+    <h3>{{ characterData.name }}</h3>
+  </div>
+  <!-- <img class="card-thumbnail" [src]="characterData.thumbNail" [alt]="characterData.name" /> -->
 </div>
