--- a/src/sass/colors.scss
+++ b/src/sass/colors.scss
@@ -2,5 +2,5 @@ $space-cadent: #2b2d42;
 $apple-red: #db162f;
 $cultured: #f5f5f5;
 $gray-web: #7c898b;
-$blue-crayola: #2081c3;
+$yale-blue: #044389;
 //--------------------------------------------
