animation on load

--- a/src/sass/animations.scss
+++ b/src/sass/animations.scss
@@ -23,3 +23,13 @@
     filter: blur(2px);
   }
 }
+@keyframes slide-up {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
