--- a/src/app/common/components/card/card.style.scss
+++ b/src/app/common/components/card/card.style.scss
@@ -15,6 +15,8 @@
   }
   transition-property: visibility;
   transition-duration: 500ms;
+
+  animation: slide-up 1.5s ease;
 }
 
 .card-content:hover,
