--- a/src/app/common/components/card/card.style.scss
+++ b/src/app/common/components/card/card.style.scss
@@ -98,6 +98,9 @@
 }
 
 @media screen and (max-width: 1050px) {
+  .card-details h2 {
+    font-size: 30px;
+  }
   .card-header {
     min-height: 40px;
     h3 {
@@ -106,9 +109,9 @@
   }
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 700px) {
   .card-details h2 {
-    font-size: 30px;
+    font-size: 35px;
   }
   .card-header {
     h3 {
