--- a/src/app/common/components/card/card.template.html
+++ b/src/app/common/components/card/card.template.html
@@ -5,7 +5,7 @@
       <h2>see details</h2>
     </div>
   </div>
-  <div class="card-header">
+  <div class="card-footer">
     <h3>{{ characterData.name }}</h3>
   </div>
   <!-- <img class="card-thumbnail" [src]="characterData.thumbNail" [alt]="characterData.name" /> -->
