--- a/src/sass/animations.scss
+++ b/src/sass/animations.scss
@@ -33,3 +33,40 @@
     transform: translateY(0);
   }
 }
+
+//WEBKIT
+@-webkit-keyframes filter-gray {
+  0% {
+    filter: grayscale(0);
+  }
+  50% {
+    filter: grayscale(50%);
+  }
+  75% {
+    filter: grayscale(90%);
+  }
+  100% {
+    filter: grayscale(100%);
+  }
+}
+@-webkit-keyframes filter-blur {
+  0% {
+    filter: blur(0);
+  }
+  50% {
+    filter: blur(1px);
+  }
+  100% {
+    filter: blur(2px);
+  }
+}
+@-webkit-keyframes slide-up {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
