--- a/src/sass/animations.scss
+++ b/src/sass/animations.scss
@@ -33,6 +33,14 @@
     transform: translateY(0);
   }
 }
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 //WEBKIT
 @-webkit-keyframes filter-gray {
@@ -68,5 +76,13 @@
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
+  }
+}
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
   }
 }
