search by term working

--- a/src/app/views/list/list.template.html
+++ b/src/app/views/list/list.template.html
@@ -1,3 +1,4 @@
+<component-filter (searchTerm)="searchTerm($event)"></component-filter>
 <div *ngIf="marvelCharacters.length" class="list-wrapper">
   <div class="list-grid">
     <div *ngFor="let char of marvelCharacters" class="list-content">
