--- a/src/app/views/list/list.style.scss
+++ b/src/app/views/list/list.style.scss
@@ -29,6 +29,9 @@ $ref-columns: 5;
   height: 50px;
   font-size: 30px;
   line-height: 1.1;
+  //----------------------
+  -webkit-animation: slide-up 1.5s ease;
+  animation: slide-up 1.5s ease;
 }
 
 //===========================================================================
