--- a/src/app/common/components/filter/filter.style.scss
+++ b/src/app/common/components/filter/filter.style.scss
@@ -12,3 +12,13 @@
   font-size: 20px;
   padding: 0 10px;
 }
+
+.btn-on {
+  color: $cultured;
+  background-color: $apple-red;
+}
+
+.btn-off {
+  color: $space-cadent;
+  background-color: $cultured;
+}
