--- a/src/app/common/components/filter/filter.template.html
+++ b/src/app/common/components/filter/filter.template.html
@@ -1,25 +1,48 @@
 <div id="filter-wrapper">
   <div id="filter-search" class="flex-container">
-    <input type="text" name="search" [(ngModel)]="textValue" class="filter-input" />
-    <button (click)="sendKeyWord()" class="default-btn search-btn">Find</button>
+    <input type="text" name="search" [(ngModel)]="textValue" class="default-input filter-input" />
+    <button (click)="sendKeyWord()" class="default-btn search-btn">
+      <img src="../../../../assets/icons/search.svg" alt="search" />
+    </button>
   </div>
   <div id="filter-controll" class="flex-container">
-    <label *ngIf="currentFilter.nameStartsWith" (click)="resetSearchTerm()">{{ displayQuery }}</label>
-    <div class="flex-container">
-      <button class="default-btn" (click)="changeOrderBy(false)" [ngClass]="{'btn-on': !updated, 'btn-off': updated}">
+    <div class="flex-container twin-row">
+      <button
+        class="default-btn twin-btn-01"
+        (click)="changeOrderBy(false)"
+        [ngClass]="{'btn-on': !updated, 'btn-off': updated}"
+      >
         A-Z
       </button>
-      <button class="default-btn" (click)="changeOrderBy(true)" [ngClass]="{'btn-on': updated, 'btn-off': !updated}">
+      <button
+        class="default-btn twin-btn-02"
+        (click)="changeOrderBy(true)"
+        [ngClass]="{'btn-on': updated, 'btn-off': !updated}"
+      >
         Popular
       </button>
     </div>
-    <div class="flex-container">
-      <button class="default-btn" (click)="changeDownUpOrder(false)" [ngClass]="{'btn-on': !desc, 'btn-off': desc}">
+    <div class="flex-container twin-row">
+      <button
+        class="default-btn twin-btn-01"
+        (click)="changeDownUpOrder(false)"
+        [ngClass]="{'btn-on': !desc, 'btn-off': desc}"
+      >
         asc
       </button>
-      <button class="default-btn" (click)="changeDownUpOrder(true)" [ngClass]="{'btn-on': desc, 'btn-off': !desc}">
+      <button
+        class="default-btn twin-btn-02"
+        (click)="changeDownUpOrder(true)"
+        [ngClass]="{'btn-on': desc, 'btn-off': !desc}"
+      >
         desc
       </button>
     </div>
+  </div>
+  <div *ngIf="currentFilter.nameStartsWith" class="flex-container search-flag">
+    <button (click)="resetSearchTerm()" class="default-btn label-search">{{ displayQuery }}</button>
+    <button (click)="resetSearchTerm()" class="default-btn clear-search">
+      <img src="../../../../assets/icons/cancel.svg" alt="cancel" />
+    </button>
   </div>
 </div>
