--- a/src/app/views/list/list.template.html
+++ b/src/app/views/list/list.template.html
@@ -11,3 +11,6 @@
     </button>
   </div>
 </div>
+<div *ngIf="notFound" class="flex-container">
+  <img src="../../../assets/icons/not-found.svg" alt="not found" class="not-found" />
+</div>
