--- a/src/sass/animations.scss
+++ b/src/sass/animations.scss
@@ -33,6 +33,16 @@
     transform: translateY(0);
   }
 }
+@keyframes slide-up-no-opactity {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 0.1;
+    transform: translateY(0);
+  }
+}
 @keyframes spin {
   0% {
     transform: rotate(0deg);
@@ -76,6 +86,17 @@
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes slide-up-no-opactity {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 0.1;
+    transform: translateY(0);
   }
 }
 @-webkit-keyframes spin {
