--- a/src/app/common/components/filter/filter.style.scss
+++ b/src/app/common/components/filter/filter.style.scss
@@ -1,7 +1,7 @@
 @import 'elements';
 
 #filter-wrapper {
-  background-color: $space-cadent;
+  background-color: $russian-violent;
   padding: 50px 0 25px;
   margin-bottom: 25px;
 }
