--- a/src/app/common/components/card/card.style.scss
+++ b/src/app/common/components/card/card.style.scss
@@ -4,7 +4,7 @@
 
 .card-content {
   cursor: pointer;
-  background-color: $space-cadent;
+  background-color: $rich-black;
   border-radius: 10px;
   box-shadow: 7px 7px 15px 0px rgb(0, 0, 0, 0.3);
 
