--- a/src/app/views/details/details.style.scss
+++ b/src/app/views/details/details.style.scss
@@ -1,3 +1,56 @@
+@import 'colors';
+@import 'fonts';
+@import 'elements';
+@import 'animations';
+
+.details-character {
+  width: 100%;
+  //-------------------
+  background-color: $russian-violent;
+}
+.details-header {
+  margin: auto;
+  text-align: center;
+  max-width: 700px;
+  width: 50%;
+  min-width: 300px;
+}
+.details-title {
+  margin: 0;
+  padding: 50px 0;
+  font-family: 'BebasNeue', sans-serif;
+  font-size: 50px;
+  color: $cultured;
+  text-shadow: 3px 3px $apple-red;
+}
+
+.details-picture {
+  width: 400px;
+  max-width: 100%;
+  margin: auto;
+  border-radius: 50%;
+}
+
+.details-description {
+  margin: 0;
+  padding: 50px 0;
+  font-family: 'ComicNeue-Regular', sans-serif;
+  font-size: 20px;
+  color: $cultured;
+  text-align: center;
+}
+
+.details-row {
+  width: 100%;
+  text-align: center;
+
+  .details-title {
+    padding: 60px 0 20px;
+    text-shadow: 3px 3px $yale-blue;
+  }
+}
+
+//-----------------------------
 .flex-wrapper {
   display: flex;
   justify-content: flex-start;
