--- a/src/app/common/components/filter/filter.template.html
+++ b/src/app/common/components/filter/filter.template.html
@@ -1,4 +1,7 @@
 <div id="filter-wrapper">
+  <div class="flex-container">
+    <img class="marvel-logo" src="../../../../assets/icons/Marvel_Logo.svg" alt="Marvel" />
+  </div>
   <div id="filter-search" class="flex-container">
     <input type="text" name="search" [(ngModel)]="textValue" class="default-input filter-input" />
     <button (click)="sendKeyWord()" class="default-btn search-btn">
