--- a/src/app/views/details/details.template.html
+++ b/src/app/views/details/details.template.html
@@ -17,4 +17,7 @@
     <h2 class="details-title">List of Events</h2>
     <component-horizontal-row [fullData]="character.events"></component-horizontal-row>
   </div>
+  <div class="details-row">
+    <a href="http://marvel.com">Data provided by Marvel. © 2021 MARVEL</a>
+  </div>
 </div>
