--- a/src/app/common/components/filter/filter.style.scss
+++ b/src/app/common/components/filter/filter.style.scss
@@ -4,10 +4,16 @@
   background-color: $russian-violent;
   padding: 50px 0 25px;
   margin-bottom: 25px;
+  box-shadow: 0px 5px 10px rgb(0, 0, 0, 0.3);
 }
 
 #filter-search {
   width: 100%;
+}
+
+.marvel-logo {
+  width: 100px;
+  padding: 0 0 20px;
 }
 
 .filter-input {
