--- a/src/app/views/home/home.template.html
+++ b/src/app/views/home/home.template.html
@@ -1,1 +1,9 @@
-<p (click)="start()">home works!</p>
+<div class="home-wrapper">
+  <div class="home-start">
+    <img src="../../../assets/icons/Marvel_Logo.svg" alt="Marvel" />
+    <h3 (click)="start()">Click HERE to Start</h3>
+  </div>
+  <div class="home-footer">
+    <a href="http://marvel.com">Data provided by Marvel. © 2021 MARVEL</a>
+  </div>
+</div>
