--- a/src/app/views/list/list.style.scss
+++ b/src/app/views/list/list.style.scss
@@ -7,6 +7,7 @@ $ref-columns: 5;
 .list-wrapper {
   width: 100%;
   margin: auto;
+  // background-color: $russian-violent;
 }
 
 .list-grid {
@@ -38,6 +39,13 @@ $ref-columns: 5;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  a {
+    text-decoration: none;
+    color: $apple-red;
+    font-size: 15px;
+    font-family: 'BebasNeue', sans-serif;
+  }
 }
 
 .not-found {
